k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-institution
  namespace: prakarsa
  labels:
    app: dashboard-institution
spec:
  type: ClusterIP
  selector:
    app: dashboard-institution
  ports:
    - name: http
      port: 80
      targetPort: 8080
