k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-institution
  namespace: prakarsa
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: no-middleware-dev-api.prakarsa.id
      http:
        paths:
          - path: /api/v1/institutions
            pathType: Prefix
            backend:
              service:
                name: dashboard-institution
                port:
                  number: 80
